fix overflow hidden and style UI buttons

--- a/style.css
+++ b/style.css
@@ -2,12 +2,9 @@
 
 * {
   font-family: "Pixelify Sans", serif;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  
 }
 
-body{
+body {
   background-color: #000;
 }
 #flashlight {
@@ -54,7 +51,6 @@ body {
   background-color: rgba(25, 161, 176, 0.9) !important; /* Color con opacidad */
   color: white;
 }
-
 
 #players-roster {
   padding: 10%;
@@ -155,21 +151,22 @@ body {
 }
 #title {
   color: white;
-  text-shadow: 2px 0 #000000, 0 1px #000000, 0px 0px 10px #C7FCCA, 0px 0px 5px #C7FCCA;
-
+  text-shadow: 2px 0 #000000, 0 1px #000000, 0px 0px 10px #c7fcca,
+    0px 0px 5px #c7fcca;
 }
 
 .button-UI {
-  background: linear-gradient(#ffe500 50%, #ffbb00 50%);
+  background: linear-gradient(#ffe500 90%, #ffa600 90%);
   color: #fff;
   border: none;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   white-space: nowrap;
   margin: 5px;
   padding: 10px 20px;
-  text-shadow: 1px 1px #000, -1px -1px #000, 0 -1px #000, 0 1px #000, 1px 0 #000, -1px 0 #000, 2px 2px #000, -2px -2px #000, 0 -2px #000, 0 2px #000, 2px 0 #000, -2px 0 #000;
-  box-shadow: inset 0 3px 0px rgba(255, 255, 255, 0.2),
-              inset 0 -3px 0px rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px #000, -1px -1px #000, 0 -1px #000, 0 1px #000, 1px 0 #000,
+    -1px 0 #000, 2px 2px #000, -2px -2px #000, 0 -2px #000, 0 2px #000,
+    2px 0 #000, -2px 0 #000;
+  box-shadow: 0px 0px 10px 5px rgba(255, 229, 0, 0.5);
   border-radius: 3px;
   position: relative;
   transition: transform 0.1s ease-in-out, box-shadow 0.2s ease, color 0.2s ease;
@@ -179,20 +176,20 @@ body {
 .button-UI:hover {
   background-color: rgb(0, 0, 0);
   color: rgb(0, 246, 189);
-  text-shadow: 1px 1px #000, -1px -1px #000, 0 -1px #000, 0 1px #000, 1px 0 #000, -1px 0 #000, 2px 2px #000, -2px -2px #000, 0 -2px #000, 0 2px #000, 2px 0 #000, -2px 0 #000;
-
-  box-shadow: inset 0 3px 0px rgba(255, 255, 255, 0.2),
-              inset 0 -3px 0px rgba(0, 0, 0, 0.2),
-              0px 0px 20px 3px #ffe500;
+  box-shadow:  2px 2px 0 rgb(0, 246, 189),
+  -2px -2px 0 rgb(0, 246, 189),
+  2px -2px 0 rgb(0, 246, 189),
+  -2px 2px 0 rgb(0, 246, 189); 
   transform: scale(1.1);
   z-index: 100;
 }
 
 .button-UI:active {
-  text-shadow: 1px 1px #000, -1px -1px #000, 0 -1px #000, 0 1px #000, 1px 0 #000, -1px 0 #000, 2px 2px #000, -2px -2px #000, 0 -2px #000, 0 2px #000, 2px 0 #000, -2px 0 #000;
+  text-shadow: 1px 1px #000, -1px -1px #000, 0 -1px #000, 0 1px #000, 1px 0 #000,
+    -1px 0 #000, 2px 2px #000, -2px -2px #000, 0 -2px #000, 0 2px #000,
+    2px 0 #000, -2px 0 #000;
   box-shadow: inset 0 3px 0px rgba(255, 255, 255, 0.2),
-              inset 0 -3px 0px rgba(0, 0, 0, 0.2),
-              0px 0px 20px 3px #ffe500;
+    inset 0 -3px 0px rgba(0, 0, 0, 0.2), 0px 0px 20px 3px #ffe500;
 }
 
 .button-UI::before {
@@ -200,14 +197,17 @@ body {
   position: absolute;
   width: 150px;
   height: 150px;
-  background: linear-gradient(180deg, rgba(255, 255, 0, 0.5), rgba(255, 255, 0, 0));
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 0, 0.5),
+    rgba(255, 255, 0, 0)
+  );
   clip-path: polygon(0px 0px, 200px 100px, 0px 200px);
   pointer-events: none;
   z-index: -1;
   opacity: 0;
   transition: opacity 0.2s ease;
 }
-
 
 #lobby {
   position: relative;
@@ -293,13 +293,12 @@ main {
   height: 300px;
 }
 
-
 .footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 6vh; 
+  height: 6vh;
   background-color: #111;
   color: white;
   padding: 0 20px;
@@ -327,7 +326,6 @@ main {
   }
 }
 
-
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -353,15 +351,14 @@ main {
   font-size: 30px;
 }
 
-#dialogueBox{
+#dialogueBox {
   text-shadow: 2px 0 #000000, 0 1px #000000, 0px 0px 10px #c7fcca,
-  0px 0px 5px #c7fcca;
+    0px 0px 5px #c7fcca;
 }
 
 #player1,
 #player2 {
-  text-shadow: 0px 0px 10px #c7fcca,
-    0px 0px 5px #c7fcca;
+  text-shadow: 0px 0px 10px #c7fcca, 0px 0px 5px #c7fcca;
   font-size: 20px;
 }
 .goblin-fighting {
@@ -371,8 +368,7 @@ main {
   height: 100%;
 }
 
-
-.duelingGoblin{
+.duelingGoblin {
   width: 35%;
 }
 /* /////////////////////////////////////SETTINGS//////////////////////////////////////       */
@@ -382,7 +378,6 @@ main {
   transform: scale(1.2);
 }
 #settingsOverlayButton {
-  
   position: relative;
   z-index: 4;
 }
@@ -566,11 +561,11 @@ main {
   background: #c7fcca;
 }
 
-.row{
+.row {
   margin-left: 0;
 }
 
-#partidaElemento.hidden{
+#partidaElemento.hidden {
   display: none;
 }
 /*--------------------------------*/
@@ -620,6 +615,6 @@ main {
 }
 
 .winner-btn:hover {
-background-color: #ffcc00;
-transform: scale(1.05);
+  background-color: #ffcc00;
+  transform: scale(1.05);
 }
